# ToolJailBreak

./: .env.example  README.md  pyproject.toml
config/: adversary.yaml  eval.yaml  providers.yaml  run.yaml  tools.yaml
data/cache/00/: 00fb1954b1db0cd0.json
data/cache/06/: 06d0bf204b948a9d.json
data/cache/08/: 085d4f627035ed45.json
data/cache/09/: 09703e05080eb3c1.json  09bee627ee81a752.json  09cdbf436a308aee.json
data/cache/0c/: 0ca94d083da1aac7.json
data/cache/0e/: 0ec3b9a0560d1702.json
data/cache/0f/: 0fe931e4857105b4.json  0ffb6428404c65db.json
data/cache/10/: 102fb8108494b170.json  10e86cac05189a27.json
data/cache/11/: 1113738826d269eb.json
data/cache/13/: 1387fabfbd98d7b9.json
data/cache/14/: 144cc3d5c0ad594c.json
data/cache/15/: 15480ce0c0984daf.json
data/cache/17/: 1743502a55b34824.json
data/cache/19/: 1917dcd90a1dbb3d.json  198c56f3cfa5300f.json
data/cache/1a/: 1a971c1c0ee66629.json  1aafc39376579ef4.json
data/cache/1b/: 1be4db376ae0b6f2.json
data/cache/1c/: 1c106245859f98c2.json  1c73b15c279a436c.json
data/cache/20/: 20a37aac45023954.json  20d9853e1c49a748.json
data/cache/21/: 2144db2d3d13a8db.json  215f48f927e0f6e0.json
data/cache/24/: 244ca2d4481bcac6.json
data/cache/25/: 25529bb6939649b9.json  (+1 more)
docs/: DESIGN.md  QUICKSTART.md
reports/: run_20260120_001538_d70dd8.json  run_20260120_001538_d70dd8.md
scripts/: monitor.py  status.sh
src/toolinject/: __init__.py  cli.py
tests/: __init__.py  conftest.py  test_cache.py  test_evaluator.py  test_providers.py  test_smoke.py  test_tools.py  test_trace.py
(+227 files in other folders)
